base/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: janneg
  labels:
    name: janneg
