base/60-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: janneg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - taskm.duckdns.org
    secretName: task-manager-tls
  rules:
  - host: taskm.duckdns.org
    http:
      paths:
      - path: /api/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: task-management
            port:
              number: 80
      - path: /assets/
        pathType: Prefix
        backend:
          service:
            name: task-management-ui
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-management-ui
            port:
              number: 80
